--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -7,4 +7,100 @@
     </div>
   </div>
 </div>
+
+
+<div class = "container"> <!-- container for 'Tasks' & 'Teams' Button -->
+  <div class = "row">
+      <p>Click to view either your tasks or your teams.</p>
+      <div class = "btn-group" role = "group" aria-label = "View Teams/Tasks button group">
+        
+        <button type="button" class = "btn btn-secondary btn-lg btn-block ">Tasks</button>
+        <button type="button" class = "btn btn-secondary btn-lg btn-block ">Teams</button>
+
+      </div>
+  </div>
+</div>
+
+<!-- container for 'My Tasks -->
+<!-- includes card for the heading & separate card for table content -->
+<div class = "container" > 
+  <div class = "row">
+    <div class = "col-12">
+      
+      <div class = "card">
+        <h3>My Tasks <button class="btn btn-sm btn-outline-secondary">+</button></h3>
+      </div>
+      <div class = "card">
+        <table class = "table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Task</th>
+              <th scope="col">Add. Info</th>
+              <th scope="col">Due Date</th>
+              <th scope="col">Assigned</th>
+              <th scope="col">Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <!--Test values, for now -->
+              <th scope="row">1</th>
+              <td>Email Steve</td>
+              <td>-</td>
+              <td>Nov 20th</td>
+              <td>Bob</td>
+              <td>In Progress</td>
+            </tr>
+            <tr>
+              <!--Test values, for now -->
+              <th scope="row">2</th>
+              <td>Write report</td>
+              <td>-</td>
+              <td>Dec 1st</td>
+              <td>Janice</td>
+              <td>Done</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+</div>
+
+<!-- container for 'My Teams' -->
+<div class = "container" > 
+  <div class = "row">
+    <div class = "col-12">
+      
+      <div class = "card">
+        <h3>My Teams <button class="btn btn-sm btn-outline-secondary">+</button></h3>
+      </div>
+      <div class = "card">
+        <table class = "table">
+          <thead>
+            <tr>
+              <th scope="col">Teams</th>
+              <th scope="col">People</th>
+  
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <!--Test values, for now -->
+              <th scope="row">Example Team #1</th>
+              <td>...</td>
+
+            </tr>
+            <tr>
+              <!--Test values, for now -->
+              <th scope="row">Example Team #1</th>
+              <td>...</td>
+      
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+</div>
+
 {% endblock %}
