--- a/static/custom.css
+++ b/static/custom.css
@@ -1,4 +1,22 @@
 /*
+* Dashboard Card
+*/
+.dashboard-card {
+  border-radius: 15%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+}
+
+/*
+* Block Buttons 
+*/
+.block-button {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/*
  * Alerts
  */
 
