--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -13,7 +13,7 @@
   <div class = "row">
       <p>Click to view either your tasks or your teams.</p>
       <div class = "btn-group " role = "group" aria-label = "View Teams/Tasks button group">
-        
+
         <button type="button" class = "btn btn-secondary btn-lg btn-block ">Tasks</button>
         <button type="button" class = "btn btn-secondary btn-lg btn-block ">Teams</button>
 
@@ -23,20 +23,21 @@
 
 <!-- container for 'My Tasks -->
 <!-- includes card for the heading & separate card for table content -->
-<div class = "container vh-100" > 
+<div class = "container vh-100" >
   <div class = "row h-100">
     <div class = "col-12">
-      
+
       <!--<div class = "card dashboard-card">-->
-        <h3>My Tasks <button class="btn btn-sm btn-outline-secondary">+</button></h3>
+{#        <h3>My Tasks <button class="btn btn-sm btn-outline-secondary">+</button></h3>#}
+        <h3>My Tasks <a href="{% url 'task_create' %}" class="btn btn-sm btn-outline-secondary">+</a></h3>
       <!--</div> -->
-      
+
       <div class = "card dashboard-card">
 
         <table class = "table">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">#ID</th>
               <th scope="col">Task</th>
               <th scope="col">Add. Info</th>
               <th scope="col">Due Date</th>
@@ -45,36 +46,28 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">1</th>
-              <td>Email Steve</td>
-              <td>-</td>
-              <td>Nov 20th</td>
-              <td>Bob</td>
-              <td>In Progress</td>
-            </tr>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">2</th>
-              <td>Write report</td>
-              <td>-</td>
-              <td>Dec 1st</td>
-              <td>Janice</td>
-              <td>Done</td>
-            </tr>
+            {% for task in tasks %}
+              <tr>
+                <td><a href="{% url 'task_create' %}" class="btn btn-sm btn-outline-secondary"> x </a>{{ task.id }}</td>
+                <td>{{ task.task_name }}</td>
+                <td>{{ task.content }}</td>
+                <td>{{ task.due }}</td>
+                <td>Bob</td>
+                <td>In Progress</td>
+              </tr>
+            {% endfor %}
           </tbody>
         </table>
       </div>
-
     </div>
+  </div>
 </div>
 
 <!-- container for 'My Teams' -->
-<div class = "container" > 
+<div class = "container" >
   <div class = "row">
     <div class = "col-12">
-      
+
       <div class = "card">
         <h3>My Teams <button class="btn btn-sm btn-outline-secondary">+</button></h3>
       </div>
@@ -82,11 +75,11 @@
         <table class = "table">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">#ID</th>
               <th scope="col">Teams</th>
               <th scope="col">Add. Info</th>
               <th scope="col">People</th>
-  
+
             </tr>
           </thead>
           <tbody>
@@ -104,12 +97,13 @@
               <td>Example Team</td>
               <td>-</td>
               <td>...</td>
-      
+
             </tr>
           </tbody>
         </table>
       </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
