--- a/tasks/templates/dashboard.html
+++ b/tasks/templates/dashboard.html
@@ -8,135 +8,31 @@
   </div>
 </div>
 
-
- 
-
-
-<!--alternative container-->
-<!--1 card for everything-->
-<div class = "container vh-100 mb-3">
-  <div class = "row h-100">
-    <div class="card">
-      <div class="card-header">
-        <ul class="nav nav-pills card-header-pills nav-fill">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">My Tasks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Teams</a>
-          </li>
-        </ul>
-      </div>
-      <div class="card-body">
-        <div id="myTasks" class="tab-content">
-          <!-- Content for My Tasks -->
-          <button class="btn btn-sm btn-outline-secondary text-left">Create Task +</button>
+  {% block dashboard_content %}
+  <!--alternative container-->
+  <!--1 card for everything-->
+  <div class = "container mb-3">
+    <div class = "row ">
+      <div class="card text-center">
+        
+        <div class="card-header">
+          <ul class="nav nav-pills card-header-pills nav-fill">
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'my_tasks' %}">My Tasks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'my_teams' %}">My Teams</a>
+            </li>
+          </ul>
         </div>
-        <div id="myTeams" class="tab-content">
-          <!-- Content for My Teams -->
+        <div class="card-body">
+            
+        <p class = "card-text">Select 'My Tasks' or 'My Teams'.</p>
           
         </div>
-        
       </div>
     </div>
   </div>
-</div>
-
-
-
-<div class = "container"> <!-- container for 'Tasks' & 'Teams' Button -->
-  <div class = "row">
-      
-      <div class = "btn-group" role = "group" aria-label = "View Teams/Tasks button group">
-        
-        <button type="button" class = "btn btn-secondary btn-lg btn-block ">Tasks</button>
-        <button type="button" class = "btn btn-secondary btn-lg btn-block ">Teams</button>
-
-      </div>
-      <p>Click to view either your tasks or your teams.</p>
-  </div>
-</div> 
-
-<!-- container for 'My Tasks -->
-<!-- includes card for the heading & separate card for table content -->
-<div class = "container" > 
-  <div class = "row">
-    <div class = "col-12">
-      
-      <div class = "card">
-        <h3>My Tasks <button class="btn btn-sm btn-outline-secondary">+</button></h3>
-      </div>
-      <div class = "card">
-        <table class = "table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Task</th>
-              <th scope="col">Add. Info</th>
-              <th scope="col">Due Date</th>
-              <th scope="col">Assigned</th>
-              <th scope="col">Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">1</th>
-              <td>Email Steve</td>
-              <td>-</td>
-              <td>Nov 20th</td>
-              <td>Bob</td>
-              <td>In Progress</td>
-            </tr>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">2</th>
-              <td>Write report</td>
-              <td>-</td>
-              <td>Dec 1st</td>
-              <td>Janice</td>
-              <td>Done</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-</div>
-
-<!-- container for 'My Teams' -->
-<div class = "container" > 
-  <div class = "row">
-    <div class = "col-12">
-      
-      <div class = "card">
-        <h3>My Teams <button class="btn btn-sm btn-outline-secondary">+</button></h3>
-      </div>
-      <div class = "card">
-        <table class = "table">
-          <thead>
-            <tr>
-              <th scope="col">Teams</th>
-              <th scope="col">People</th>
-  
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">Example Team #1</th>
-              <td>...</td>
-
-            </tr>
-            <tr>
-              <!--Test values, for now -->
-              <th scope="row">Example Team #1</th>
-              <td>...</td>
-      
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-</div>
+  {% endblock %}
 
 {% endblock %}
