--- a/tasks/templates/my_tasks.html
+++ b/tasks/templates/my_tasks.html
@@ -30,6 +30,7 @@
                         <th scope="col">Due Date</th>
                         <th scope="col">Assigned</th>
                         <th scope="col">Status</th>
+                        <th scope="col">Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -37,10 +38,15 @@
                     <tr>
                         <th scope="row">{{ task.id }}</th>
                         <td>{{ task.task_name }}</td>
-                        <td>{{ task.content }}</td>
+                        <td>{{ task.task_description }}</td>
                         <td>{{ task.due }}</td>
                         <td>{{ user.username }}</td>
                         <td>{{ task.status }}</td>
+                        <td>
+                            <a href="{% url 'delete_task' task.id %}" class="btn btn-danger" title="Delete">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
