Add teams model, view, form and html. Users can now create teams.

--- a/tasks/templates/create_team.html
+++ b/tasks/templates/create_team.html
@@ -5,13 +5,13 @@
 <div class = "container ">
     <div class = "row">
         <div class = "col-12">
-            <h1>Create A Task!</h1>
+            <h1>Create A Team!</h1>
             
-            <form action="{% url 'create_task' %}" method="post" >
+            <form action="{% url 'create_team' %}" method="post" >
                 {% csrf_token %}
                 {% include 'partials/bootstrap_form.html' with form=form%} 
 
-                <button type="submit" class = "btn btn-secondary ">Create Task</button>
+                <button type="submit" class = "btn btn-secondary ">Create Team</button>
             </form>
          
         </div>
