--- a/tasks/templates/edit_team.html
+++ b/tasks/templates/edit_team.html
@@ -1,21 +1,20 @@
 {% extends 'base_content.html' %}
 {% block content %}
 
-
 <div class = "container ">
     <div class = "row">
         <div class = "col-12">
-            <h1>Create A Team!</h1>
-            
-            <form action="{% url 'create_team' %}" method="post" >
+            <h1>Edit Team Details!</h1>
+            <form action="{% url 'edit_team' team.id %}" method="post" >
                 {% csrf_token %}
                 {% include 'partials/bootstrap_form.html' with form=form%} 
                 
-                <button type="submit" class = "btn btn-secondary ">Create Team</button>
+                <button type="submit" class = "btn btn-secondary ">Save Edits</button>
             </form>
-         
+           
         </div>
     </div>
 </div>
+
 
 {% endblock %}
