--- a/tasks/templates/my_teams.html
+++ b/tasks/templates/my_teams.html
@@ -26,7 +26,9 @@
                           <th scope="col">#ID</th>
                           <th scope="col">Team</th>
                           <th scope="col">Team Description</th>
+                          <th scope="col">Edit</th>
                           <th scope="col">Delete</th>
+                          <th scope="col">Info</th>
 
                       </tr>
                   </thead>
@@ -37,10 +39,21 @@
                           <td>{{ team.team_name }}</td>
                           <td>{{ team.team_description }}</td>
                           <td>
-                              <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
-                                  <i class="bi bi-trash"></i>
-                              </a>
+                            <a href="{% url 'edit_team' team.id %}" class="btn btn-dark" title="Edit">
+                              <i class="bi bi-pencil"></i>
+                            </a>
                           </td>
+                          <td>
+                            <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                          </td>
+                          <td>
+                            <a href="{% url 'team_info' team.id %}" class="btn btn-info" title="Info">
+                                <i class="bi bi-info-circle"></i>
+                            </a>
+                          </td>
+                          
                       </tr>
                   {% endfor %}
                   </tbody>
