--- a/tasks/templates/my_teams.html
+++ b/tasks/templates/my_teams.html
@@ -1,14 +1,14 @@
 {% extends 'dashboard.html' %}
 {% block dashboard_content %}
-<!--alternative container-->
-<!--1 card for everything-->
-<div class = "container vh-100 mb-3">
-    <div class = "row h-100">
+  <!--alternative container-->
+  <!--1 card for everything-->
+  <div class="container vh-100 mb-3">
+    <div class="row h-100">
       <div class="card">
         <div class="card-header">
           <ul class="nav nav-pills card-header-pills nav-fill">
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'my_tasks' %}">My Tasks</a>
+              <a class="nav-link" href="{% url 'my_tasks' %}">My Tasks</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="{% url 'my_teams' %}">My Teams</a>
@@ -16,41 +16,54 @@
           </ul>
         </div>
         <div class="card-body">
-            <div id="myTeams" class="tab-content">
-                <!-- Content for My Teams -->
-                <a href="{% url 'create_team' %}" button class="btn btn-sm btn-outline-secondary">Create Team +</button></a>
+          <div id="myTeams" class="tab-content">
+            <!-- Content for My Teams -->
+            <a href="{% url 'create_team' %}" class="btn btn-sm btn-outline-secondary">Create Team +</a>
 
-                <table class = "table">
-                  <thead>
-                      <tr>
-                          <th scope="col">#ID</th>
-                          <th scope="col">Team</th>
-                          <th scope="col">Team Description</th>
-                          <th scope="col">Delete</th>
-
-                      </tr>
-                  </thead>
-                  <tbody>
-                  {% for team in teams %}
-                      <tr>
-                          <th scope="row">{{ team.id }}</th>
-                          <td>{{ team.team_name }}</td>
-                          <td>{{ team.team_description }}</td>
-                          <td>
-                              <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
-                                  <i class="bi bi-trash"></i>
-                              </a>
-                          </td>
-                      </tr>
-                  {% endfor %}
-                  </tbody>
-                </table>
-
-
-            </div>
-          
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">#ID</th>
+                  <th scope="col">Team</th>
+                  <th scope="col">Team Description</th>
+                  <th scope="col">Actions</th>
+                  <th scope="col">Delete</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for team in teams %}
+                <tr>
+                  <th scope="row">{{ team.id }}</th>
+                  <td>{{ team.team_name }}</td>
+                  <td>{{ team.team_description }}</td>
+                  <td>
+                    <div class="btn-group" role="group">
+                      <!-- View Team Members button-->
+                      <a href="{% url 'view_team_members' team_id=team.id %}" class="btn btn-info me-2">
+                        View Team Members
+                      </a>
+                      <!-- Invite Users button-->
+                      <a href="{% url 'invite_users' team_id=team.id %}" class="btn btn-success me-2">
+                        Invite Users
+                      </a>
+                      <!-- View Invitations button -->
+                      <a href="{% url 'view_invitations' %}" class="btn btn-primary">
+                        View Invitations
+                      </a>
+                    </div>
+                  </td>
+                  <td>
+                    <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
+                      <i class="bi bi-trash"></i>
+                    </a>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  {%endblock%}
+{% endblock %}
