Change task/team ordering to update when task/team is deleted

--- a/tasks/templates/my_tasks.html
+++ b/tasks/templates/my_tasks.html
@@ -37,7 +37,7 @@
                 <tbody>
                 {% for task in tasks %}
                     <tr>
-                        <th scope="row">{{ task.id }}</th>
+                        <th scope="row">{{ forloop.counter }}</th>
                         <td>{{ task.task_name }}</td>
                         <td>{{ task.task_description }}</td>
                         <td>{{ task.due }}</td>
