--- a/tasks/templates/my_teams.html
+++ b/tasks/templates/my_teams.html
@@ -27,15 +27,16 @@
                           <th scope="col">Team</th>
                           <th scope="col">Team Description</th>
                           <th scope="col">Edit</th>
-                          <th scope="col">Delete</th>
                           <th scope="col">Info</th>
+                          <th scope="col">Delete</th>
+                          
 
                       </tr>
                   </thead>
                   <tbody>
                   {% for team in teams %}
                       <tr>
-                          <th scope="row">{{ team.id }}</th>
+                          <th scope="row">{{ forloop.counter }}</th>
                           <td>{{ team.team_name }}</td>
                           <td>{{ team.team_description }}</td>
                           <td>
@@ -44,15 +45,16 @@
                             </a>
                           </td>
                           <td>
-                            <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
-                                <i class="bi bi-trash"></i>
-                            </a>
-                          </td>
-                          <td>
                             <a href="{% url 'team_info' team.id %}" class="btn btn-info" title="Info">
                                 <i class="bi bi-info-circle"></i>
                             </a>
                           </td>
+                          <td>
+                            <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" title="Delete">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                          </td>
+                          
                           
                       </tr>
                   {% endfor %}
