--- a/tasks/templates/my_tasks.html
+++ b/tasks/templates/my_tasks.html
@@ -33,8 +33,8 @@
                         <th scope="col">Due Date</th>
                         <th scope="col">Assigned</th>
                         <th scope="col">Status</th>
-                        <!--<th scope="col">Edit</th>-->
-                        <th scope="col"> </th>
+                        <th scope="col">Edit</th>
+                        <th scope="col">Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,6 +46,11 @@
                         <td>{{ task.due }}</td>
                         <td>{{ task.assigned }}</td>
                         <td>{{ task.get_status_display }}</td>
+                        <td>
+                          <a href="{% url 'edit_task' task.id %}" class="btn btn-dark" title="Edit">
+                            <i class="bi bi-pencil"></i>
+                          </a>
+                        </td>
                         
                         <td>
                             <a href="{% url 'delete_task' task.id %}" class="btn btn-danger" title="Delete">
