--- a/tasks/templates/edit_task.html
+++ b/tasks/templates/edit_task.html
@@ -4,7 +4,7 @@
 <div class = "container ">
     <div class = "row">
         <div class = "col-12">
-            <h1>Edit Team Details!</h1>
+            <h1>Edit Task Details!</h1>
             <form action="{% url 'edit_task' task.id %}" method="post" >
                 {% csrf_token %}
                 {% include 'partials/bootstrap_form.html' with form=form%} 
