--- a/tasks/templates/view_team_members.html
+++ b/tasks/templates/view_team_members.html
@@ -14,6 +14,8 @@
                     <ul>
                         {% for member in team_members %}
                             <li>{{ member.username }} - {{ member.email }}</li>
+                            {% empty %}
+                            <li>No members found.</li>
                         {% endfor %}
                     </ul>
                     <br>
