--- a/tasks/templates/delete_task.html
+++ b/tasks/templates/delete_task.html
@@ -14,8 +14,8 @@
                         <p class = "card-text">Task: {{task.task_name}}</p>
                         <p class = "card-text">Task Description: {{task.task_description}}</p>
                         <p class = "card-text">Due: {{task.due}}</p>
-                        <p class = "card-text">Assignor: {{task.assignor.username}}</p>
-                        <p class = "card-text">Assigned to: {{user.username}}</p>
+{#                        <p class = "card-text">Assignor: {{task.assignor.username}}</p>#}
+                        <p class = "card-text">Assigned: {{user.username}}</p>
                         <p class = "card-text">Status: {{task.get_status_display}}</p>
                         <form action ="{% url 'delete_task' task_id %}" method="post">
                             {% csrf_token %}
