--- a/tasks/templates/my_tasks.html
+++ b/tasks/templates/my_tasks.html
@@ -24,7 +24,7 @@
               <table class = "table">
                 <thead>
                     <tr>
-                        <th scope="col">#ID</th>
+                        <th scope="col">#</th>
                         <th scope="col">Task</th>
                         <th scope="col">Add. Info</th>
                         <th scope="col">Due Date</th>
